@@ -20,7 +20,7 @@
 </UL>
 <H3>Description</H3>
  This is the base class for browsers.  To be useful it must be
-subclassed and several virtual functions defined.  The Forms-compatable
+subclassed and several virtual functions defined.  The Forms-compatible
 browser and the file chooser's browser are subclassed off of this.
 <P>This has been designed so that the subclass has complete control
 over the storage of the data, although because <TT>next()</TT> and <TT>
