@@ -20,7 +20,7 @@ functions. Most of the XForms demo programs work without changes.
 <P>You will also have to compile your Forms or XForms program using a
 C++ compiler.  The FLTK library does not provide C bindings or header
 files. </P>
-<P>Although FLTK was designed to be compatable with the GL Forms
+<P>Although FLTK was designed to be compatible with the GL Forms
 library (version 0.3 or so), XForms has bloated severely and it's
 interface is X-specific.  Therefore, XForms compatibility is no longer
 a goal of FLTK.  Compatibility was limited to things that were free, or
