@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Browser_.cxx,v 1.10.2.16.2.20 2004/04/11 04:38:57 easysw Exp $"
+// "$Id: Fl_Browser_.cxx,v 1.10.2.16.2.21 2004/07/27 16:02:19 easysw Exp $"
 //
 // Base Browser widget class for the Fast Light Tool Kit (FLTK).
 //
@@ -510,7 +510,10 @@ int Fl_Browser_::select(void* l, int i, int docallbacks) {
       display(l);
     }
   }	    
-  if (docallbacks) do_callback();
+  if (docallbacks) {
+    set_changed();
+    do_callback();
+  }
   return 1;
 }
 
@@ -687,8 +690,8 @@ int Fl_Browser_::handle(int event) {
       void* t = selection_; deselect(); selection_ = t;
     }
     if (change) {
+      set_changed();
       if (when() & FL_WHEN_RELEASE) do_callback();
-      else if (!(when()&FL_WHEN_CHANGED)) set_changed();
     } else {
       if (when() & FL_WHEN_NOT_CHANGED) do_callback();
     }
@@ -758,5 +761,5 @@ void Fl_Browser_::item_select(void*, int) {}
 int Fl_Browser_::item_selected(void* l) const {return l==selection_;}
 
 //
-// End of "$Id: Fl_Browser_.cxx,v 1.10.2.16.2.20 2004/04/11 04:38:57 easysw Exp $".
+// End of "$Id: Fl_Browser_.cxx,v 1.10.2.16.2.21 2004/07/27 16:02:19 easysw Exp $".
 //
